Patches mentioned in current README

--- a/info.plist
+++ b/info.plist
@@ -3,14 +3,14 @@
 <plist version="1.0">
 <dict>
 	<key>contactEmailRot13</key>
-	<string>znvyzngr@knz.qx</string>
+	<string>zvxr@chqqvatgvzr.bet</string>
 	<key>contactName</key>
-	<string>Max Rydahl Andersen</string>
+	<string>Mike Hall</string>
 	<key>description</key>
 	<string>Integration with org-mode files.</string>
 	<key>name</key>
 	<string>org-mode</string>
 	<key>uuid</key>
-	<string>04CE6F04-DC66-478F-92FF-885BD0BA1384</string>
+	<string>8ceaf72a-8dab-4708-a07b-67cb7e9d6225</string>
 </dict>
 </plist>
